--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 # GUI tool GNOME, KDE
-os_gui: gnome
+os_gui: True
 
-# aliyun...
-os_cloud_agent: aliyun
+# aliyun
+os_cloud_agent: #aliyun
 
 # vnc or remote
 os_connection: vnc
