--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -27,8 +27,8 @@
   
   - name: vns service config
     copy:
-      src: vncserver@:1.service
-      dest: /var/lib/systemd/system/
+      src: vncserver.service
+      dest: /var/lib/systemd/system/vncserver@:1.service
 
   - name: VNC Server Start
     service:
