--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,6 +1,7 @@
 - block:
   - name: Install Desktop
     shell: yum groupinstall -y 'Server with GUI'
+    ignore_errors: yes
 
   - name: Config Desktop
     shell: |
