--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,3 +1,9 @@
+- name: Create a random password for VNC
+  set_fact: temp_password="{{ lookup('password', '/tmp/passwordfile length=8 chars=digits') }}"
+
+- name: delete tmp/passwordfile
+  shell: rm -rf /tmp/passwordfile
+  
 - block:
   - name: Install Desktop
     shell: yum groupinstall -y 'Server with GUI'
@@ -21,8 +27,8 @@
     expect:
       command: vncserver
       responses:
-        "password": "websoft9"
-        "Verify": "websoft9"
+        "password": "{{temp_password}}"
+        "Verify": "{{temp_password}}"
         "view-only": "n"
   
   - name: vnc service config
