--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -34,7 +34,7 @@
   - name: vnc service config
     copy:
       src: vncserver.service
-      dest: /etc/systemd/system/vncserver@:1.service
+      dest: /lib/systemd/system/vncserver@.service
 
   - name: VNC Server Start
     service:
