--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -9,6 +9,21 @@
       systemctl get-default
   when: os_gui=="gnome"
 
+
+- block:
+  - name: Install Desktop
+    shell: |
+      yum groupinstall X Window System"
+      yum groupinstall "KDE"
+      startx
+
+  - name: Config Desktop
+    shell: |
+      systemctl set-default graphical.target
+      systemctl isolate graphical.target
+      systemctl get-default
+  when: os_gui=="kde"
+
 - block: 
   - name: Create a random password for VNC
     set_fact: temp_password="{{ lookup('password', '/tmp/passwordfile length=8 chars=digits') }}"
