--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,62 +1,15 @@
-- block:
-  - name: Install Desktop
-    shell: yum groupinstall -y 'Server with GUI'
-
-  - name: Config Desktop
-    shell: |
-      systemctl set-default graphical.target
-      systemctl isolate graphical.target
-      systemctl get-default
+- name: Install GNOME Desktop
+  shell: yum groupinstall -y 'Server with GUI'
   when: os_gui=="gnome"
 
-
-- block:
-  - name: Install Desktop
-    shell: |
-      yum groupinstall -y "X Window System"
-      yum groupinstall -y "KDE"
-
-  - name: Config Desktop
-    shell: |
-      systemctl set-default graphical.target
-      systemctl isolate graphical.target
-      systemctl get-default
+- name: Install KDE Desktop
+  shell: |
+    yum groupinstall -y "X Window System"
+    yum groupinstall -y "KDE"
   when: os_gui=="kde"
 
-- block: 
-  - name: Create a random password for VNC
-    set_fact: temp_password="{{ lookup('password', '/tmp/passwordfile length=8 chars=digits') }}"
-  
-  - debug:
-      msg: Testing VNC password is {{ temp_password }}
-
-  - name: delete tmp/passwordfile
-    shell: rm -rf /tmp/passwordfile
-  
-  - name: Install VNC Server
-    yum:
-      name: [tigervnc-server]
-
-  - name: clean
-    shell: rm -rf /root/.vnc
-
-  - name: vnc password
-    expect:
-      command: vncpasswd
-      responses:
-        "Password": "{{temp_password}}"
-        "Verify": "{{temp_password}}"
-        "view-only": "n"
-  
-  - name: vnc service config
-    copy:
-      src: vncserver.service
-      dest: /lib/systemd/system/vncserver@.service
-
-  - name: VNC Server Start
-    service:
-      name: vncserver@:1.service
-      enabled: yes
-      state: started
-      
-  when: os_connection == 'vnc'
+- name: Config Desktop
+  shell: |
+    systemctl set-default graphical.target
+    systemctl isolate graphical.target
+    systemctl get-default
