--- a/files/vncserver.service
+++ b/files/vncserver.service
@@ -5,10 +5,10 @@ After=syslog.target network.target
 [Service]
 Type=forking
 
-ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
+ExecStartPre=-/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
 ExecStart=/usr/sbin/runuser -l root -c "/usr/bin/vncserver %i"
-PIDFile=/root/.vnc/%H%i.pid
-ExecStop=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
+PIDFile=-/root/.vnc/%H%i.pid
+ExecStop=-/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
 
 [Install]
 WantedBy=multi-user.target
