--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,4 @@
 
 - name: Install VNC server and configure it
   include: vnc.yml
-  when: os_connection == 'vnc'
+  when: os_connection == 'vnc' || os_connection == 'remote'
