--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,7 @@
 
 - name: Install VNC server and configure it
   include: vnc.yml
-  when: os_connection == 'vnc' || os_connection == 'remote'
+
+- name: Install remote xrdp server 
+  include: remote.yml
+  when: os_connection == 'remote'
