--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -8,8 +8,8 @@
 - name: Install KDE Desktop
   shell: |
     apt install tasksel
+    apt install sddm -y
     tasksel install kubuntu-desktop
-    apt install sddm
   when: os_gui=="kde"
   
 - name: Install Xfce Desktop
