--- a/tasks/vnc.yml
+++ b/tasks/vnc.yml
@@ -16,9 +16,6 @@
   - debug:
       msg: Testing VNC password is {{ temp_password }}
 
-  #- name: delete tmp/passwordfile
-  #  shell: rm -rf /tmp/passwordfile
-
   - name: Configure vncserver password
     expect:
       command: vncpasswd
@@ -27,6 +24,14 @@
         "Verify": "{{temp_password}}"
         "view-only": "n"
 
+- name: Create password directory
+  file:
+    path: /credentials
+    state: directory
+  
+- name: 
+  shell: sudo sh -c 'echo {{ temp_password }} 1> /credentials/password.txt'
+  
 # vncserver configure
 - name: Copy vncserver.service(when system_user=root) 
   template: 
