cockpit add web os

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,7 @@
 - name: check_xrdp_service
   debug:
     var: check_xrdp_service.stdout
+    
+- name: check_cockpit_service
+  debug:
+    var: check_cockpit_service.stdout
