--- a/tasks/cockpit.yml
+++ b/tasks/cockpit.yml
@@ -10,7 +10,13 @@
     name: [cockpit*]
     update_cache: yes    
   when: ansible_os_family == "RedHat"
-
+  
+- name: Change cockpit port 
+  lineinfile:
+      dest: /usr/lib/systemd/system/cockpit.socket
+      regexp: "ListenStream=9090"
+      line: "ListenStream={{cockpit_port}}"
+      backrefs: yes
 # configure
 - name: Configuration Cockpit Server
   copy:
@@ -18,6 +24,7 @@
     dest: /etc/cockpit/
     owner: cockpit-ws
     group: cockpit-ws
+    force: yes
     mode: 0640
 
 - name: Start & Enable cockpit
