--- a/files/cockpit.conf
+++ b/files/cockpit.conf
@@ -1,3 +1,5 @@
+[Log]
+Fatal = criticals
 # allow http connection, Otherwise, it redirects all HTTP connections to HTTPS
 [WebService]
 AllowUnencrypted = true
