--- a/tasks/cockpit.yml
+++ b/tasks/cockpit.yml
@@ -14,7 +14,7 @@
 - name: Change cockpit port 
   lineinfile:
       dest: /usr/lib/systemd/system/cockpit.socket
-      regexp: "ListenStream=9090"
+      regexp: "ListenStream={{ os_cockpit_port }}"
       line: "ListenStream={{cockpit_port}}"
       backrefs: yes 
 
