--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,10 @@
 # Install default GUI, gnome,kde
 os_gui: gnome
 
+# Install web gui
+os_webgui: cockpit
+
 # vnc or remote
 os_connection: vnc
-
-os_web: True
 os_cockpit_port: 8090
 
