--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -22,3 +22,5 @@
     systemctl set-default graphical.target
     systemctl isolate graphical.target
     systemctl get-default
+  when: os_gui is defined and os_gui is not none
+
