--- a/tasks/cockpit.yml
+++ b/tasks/cockpit.yml
@@ -13,7 +13,7 @@
   
 - name: Change cockpit port 
   lineinfile:
-      dest: /usr/lib/systemd/system/cockpit.socket
+      dest: /lib/systemd/system/cockpit.socket
       regexp: "ListenStream=9090"
       line: "ListenStream={{os_cockpit_port}}"
       backrefs: yes 
@@ -31,6 +31,8 @@
 - name: Start & Enable cockpit
   shell: |
     systemctl restart cockpit
+    systemctl daemon-reload
+    systemctl restart cockpit.socket
     systemctl enable --now cockpit.socket 
 
 - name: Check cockpit Service
